# digital_twin_convey

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  HANDOFF.md  MANIFEST.sha256  README.md
docs/: ALGORITHM_INTEGRATION.md  ARCHITECTURE.md  AUDIT.md  CHANGE_HISTORY_CURRENT.md  CLUSTER_SINGULATION.md  COMMAND_REFERENCE.md  GITHUB_AND_SUBMISSION.md  HANDOFF_CHECKLIST.md  INFEED_SIZE_SEPARATOR.md  INTERFACES.md  PARAMETER_REFERENCE.md  POSITIVE_FLOW_CONTROL.md  ROLLER_THROAT_UPGRADE.md  RUNBOOK.md  SINGULATION_CONTROLLER.md  SPAWN_SCENARIOS.md  TROUBLESHOOTING.md  TUNING_GUIDE.md  V3_STAGED_CLUSTER_CONTROL.md  V4_SLOT_SCHEDULER.md  V5_UNIFORM_SLOT_CONTROL.md  V6_RANK_LOCK_AND_ROLLER_TRANSFER.md  V7_GLOBAL_QUEUE_CONTROL.md  VISION_INTERFACE.md
examples/: matrix_command_publisher.py  result_data_example.json
external_artifacts/: README.md
project_materials/: README.md
scripts/: build.sh  check_environment.sh  check_positive_flow.sh  check_roller_upgrade.sh  check_running.sh  check_singulation.sh  check_speeds.sh  check_v3_control.sh  check_v4_control.sh  check_v5_control.sh  check_v6_control.sh  check_v7_control.sh  check_vision.sh  publish_handoff.sh  regenerate_roller_throat.sh  regenerate_v2_world.sh  run_demo.sh  run_integration.sh  run_roller_demo.sh  run_scenario.sh  stop_demo.sh  (+4 more)
src/singulator_bringup/: package.xml  setup.cfg  setup.py
src/singulator_bringup/config/: bridge_aux.yaml  bridge_rows_00_03.yaml  bridge_rows_04_07.yaml  bridge_rows_08_11.yaml  bridge_rows_12_13.yaml  bridge_rows_14_17.yaml  bridge_separator.yaml  bridge_separator_demo.yaml  bridge_throat.yaml  matrix_bridge.yaml  single_cell_bridge.yaml
src/singulator_bringup/launch/: infeed_size_separator_demo.launch.py  matrix.launch.py  matrix_stream.launch.py  matrix_stream_roller.launch.py  single_cell.launch.py
src/singulator_control/: package.xml  setup.cfg  setup.py
src/singulator_control/singulator_control/: aux_conveyor_controller.py  global_queue_logic.py  matrix_test_controller.py  roller_throat_controller.py  row_1x4_controller.py  separator_demo_controller.py  single_cell_commander.py  singulation_controller.py  uniform_matrix_controller.py
src/singulator_gazebo/: CMakeLists.txt  package.xml
src/singulator_gazebo/scripts/: generate_matrix_14x4_stream.py  generate_matrix_14x4_stream_v2.py  generate_matrix_world.py
src/singulator_gazebo/worlds/: infeed_size_separator_demo.sdf  matrix_14x4.sdf  matrix_14x4_stream.sdf  matrix_14x4_stream_v2.sdf  matrix_3x4.sdf  matrix_3x4_before_friction_test.sdf  row_1x4.sdf  single_cell.sdf  single_cell_debug.sdf  single_cell_motion.sdf
src/singulator_interfaces/: CMakeLists.txt  package.xml
src/singulator_interfaces/msg/: BoxObservation.msg  BoxObservationArray.msg  MatrixCommand.msg  MatrixState.msg
src/singulator_interfaces/srv/: ResetScenario.srv
src/singulator_sim/: package.xml  setup.cfg  setup.py
src/singulator_sim/singulator_sim/: box_model.py  cleanup_passed_boxes.py  matrix_command_fanout.py  separator_demo_cleanup.py  separator_demo_spawner.py  singulation_row_spawner.py
(+33 files in other folders)
