<?xml version="1.0"?>
<package format="3">
  <name>singulator_bringup</name>
  <version>0.2.0</version>
  <description>Launch files and bridge configuration for the singulator.</description>
  <maintainer email="team@example.com">Singulator Team</maintainer>
  <license>Apache-2.0</license>


  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
  <exec_depend>singulator_description</exec_depend>
  <exec_depend>singulator_gazebo</exec_depend>
  <exec_depend>singulator_interfaces</exec_depend>
  <exec_depend>singulator_sim</exec_depend>
  <exec_depend>singulator_perception</exec_depend>
  <exec_depend>singulator_control</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
