<?xml version="1.0"?>
<package format="3">
  <name>singulator_gazebo</name>
  <version>0.2.0</version>
  <description>Gazebo worlds for the singulator digital twin.</description>
  <maintainer email="team@example.com">Singulator Team</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>singulator_description</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
